# url_shortener

./: README.md
backend/: compose.yaml  test.sh
backend/src/: .env
backend/src/app/: Dockerfile  pyproject.toml
backend/src/app/api/: constants.py  db.py  main.py  models.py  schemas.py
backend/src/hash/: Dockerfile  pyproject.toml
backend/src/hash/api/: main.py
frontend/: .eslintrc.json  README.md  next.config.js  package.json  tsconfig.json
frontend/src/components/: Page.js
frontend/src/constants/: index.js  landingPage.js
frontend/src/layouts/Fixed/components/Footer/: Footer.js
frontend/src/layouts/Fixed/components/Topbar/: Topbar.js
frontend/src/layouts/Fluid/: Fluid.js
frontend/src/layouts/Main/: Main.js
frontend/src/layouts/Main/components/Footer/: Footer.js
frontend/src/layouts/Main/components/Topbar/: Topbar.js
frontend/src/layouts/Main/components/Topbar/components/: index.js
frontend/src/pages/: 404.js  _app.js  _document.js  index.js
frontend/src/pages/not-found/: index.js
frontend/src/services/: ApiService.js
frontend/src/services/apis/: index.js
frontend/src/theme/: index.js  palette.js
frontend/src/utilities/: env.js
frontend/src/views/WebBasic/: WebBasic.js
frontend/src/views/WebBasic/components/: index.js
frontend/src/views/WebBasic/components/Create/: Create.js
frontend/src/views/WebBasic/components/Hero/: Hero.js
frontend/src/views/WebBasic/components/Lookup/: Lookup.js
frontend/src/views/WebBasic/components/NotFoundCover/: NotFoundCover.js
(+4 files in other folders)
