[tool.poetry]
name = "app"
version = "0.1.0"
description = "UrlShortener application"
authors = ["tailorck <chiragktailor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
peewee = "^3.17.0"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
