[tool.poetry]
name = "hash"
version = "0.1.0"
description = "A hashing service to convert long urls to short urls"
authors = ["tailorck <chiragktailor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
